--- a/HelpDesk/Views/Shared/FormComplaint.cshtml
+++ b/HelpDesk/Views/Shared/FormComplaint.cshtml
@@ -204,7 +204,7 @@
                     <label for="lname">No Contact Person</label>
                 </div>
                 <div class="col-75">
-                    <input id="two" type="text" id="Email" name="NoHp" value='@Email' required>
+                    <input id="two" type="text" id="Email" name="NoHp" required>
                 </div>
             </div>
 
@@ -274,14 +274,6 @@
 
             <br>
 
-            <div class="row">
-                <div class="col-25">
-                    <label for="img">Upload Dokumen:</label>
-                </div>
-                <div class="col-75">
-                    <input type="file" id="ImageFile" name="File" accept="pdf/*">
-                </div>
-            </div>
 
             <br>
 
